welcome.lessons.welcome.bat.bool1.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
	if ( a !> 10 && a !< 20) {
		if ( b !> 10 && b !< 20) {
			return false
		}else{
			return true
		}
	}else {
		return true
	}
}
